# intent

./: .gitignore  .pre-commit-config.yaml  README.md  documentation.md  intent.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  static.yml
docs/: comparison.md  documentation-strategy.md  getting-started.md  index.md  troubleshooting.md
docs/cli/: commands.md
docs/config/: checks-and-gates.md  ci.md  schema.md
docs/examples/: django-complete.md  fastapi-complete.md  generate-files.md  metrics-and-gates.md  metrics-reference.md
docs/integrations/: django-fastapi.md  tooling.md
docs/releases/: 0.1.3.md  index.md
docs/usage/: baseline-intent.md  full-ci-intent.md  overview.md  quality-gates-intent.md
intent/: cli.py  config.py  fs.py  pyproject_reader.py  render_ci.py  render_just.py  versioning.py
tests/: test_cli_doctor.py  test_cli_dry_run_and_check.py  test_cli_init.py  test_cli_lint_workflow.py  test_cli_reconcile.py  test_cli_show.py  test_config.py  test_fs.py  test_pyproject_reader.py  test_render_ci.py  test_render_just.py  test_version_checks.py  test_version_precision.py
