[project]
name = "intent-cli"
version = "0.1.0"
description = "Safety-first tool to generate tool-owned project files from intent.toml"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "sankarebarri" }]
keywords = [
    "ci",
    "github-actions",
    "justfile",
    "just",
    "automation",
    "scaffolding",
    "generator",
    "devtools",
    "tooling",
    "configuration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "packaging>=24.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/sankarebarri/intent"
Repository = "https://github.com/sankarebarri/intent"
Issues = "https://github.com/sankarebarri/intent/issues"

[project.scripts]
intent = "intent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["intent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
